# SharedIO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qt_sharedmem.pro
app1/: app1.pro  main.cpp
app2/: app2.pro  main.cpp
demo/: id.h
demo/app1/: CMakeLists.txt  main.cpp
demo/app2/: CMakeLists.txt  main.cpp
demo/app3/: CMakeLists.txt  main.cpp
sharedio/: CMakeLists.txt  sharedio.cpp  sharedio.hpp
sharedio/include/sharedio/: sharedio.hpp
sharedio/src/: sharedio.cpp  sharedioprivate.cpp  sharedioprivate.hpp
